Add compatibility with Java 9+ (#20)